Replace external_trigger check with DagRunType
        - Fix test_handle_multiple_columns_unique_constraint_error

        - Resolve ashb code review

        - Add newsfragment

        - Replace external_trigger is False logic with run_type is SCHEDULED

        - Fix _emit_true_scheduling_delay_stats_for_finished_state

	- Fix migrations fix after rebasing to latest main
