# airflow/models/dagrun.py
@@ -26,7 +26,6 @@ from typing import TYPE_CHECKING, Any, Callable, NamedTuple, TypeVar, overload
 import re2
 from sqlalchemy import (
     JSON,
-    Boolean,
     Column,
     Enum,
     ForeignKey,
@@ -141,7 +140,6 @@ class DagRun(Base, LoggingMixin):
     _state = Column("state", String(50), default=DagRunState.QUEUED)
     run_id = Column(StringID(), nullable=False)
     creating_job_id = Column(Integer)
-    external_trigger = Column(Boolean, default=True)
     run_type = Column(String(50), nullable=False)
     triggered_by = Column(
         Enum(DagRunTriggeredByType, native_enum=False, length=50)
@@ -242,7 +240,6 @@ class DagRun(Base, LoggingMixin):
         logical_date: datetime | None = None,
         run_after: datetime | None = None,
         start_date: datetime | None = None,
-        external_trigger: bool | None = None,
         conf: Any | None = None,
         state: DagRunState | None = None,
         run_type: str | None = None,
@@ -265,7 +262,6 @@ class DagRun(Base, LoggingMixin):
         self.logical_date = logical_date
         self.run_after = run_after
         self.start_date = start_date
-        self.external_trigger = external_trigger
         self.conf = conf or {}
         if state is not None:
             self.state = state
@@ -284,7 +280,7 @@ class DagRun(Base, LoggingMixin):
     def __repr__(self):
         return (
             f"<DagRun {self.dag_id} @ {self.logical_date}: {self.run_id}, state:{self.state}, "
-            f"queued_at: {self.queued_at}. externally triggered: {self.external_trigger}>"
+            f"queued_at: {self.queued_at}. run_type: {self.run_type}>"
         )
 
     @validates("run_id")
@@ -554,7 +550,6 @@ class DagRun(Base, LoggingMixin):
         run_id: Iterable[str] | None = None,
         logical_date: datetime | Iterable[datetime] | None = None,
         state: DagRunState | None = None,
-        external_trigger: bool | None = None,
         no_backfills: bool = False,
         run_type: DagRunType | None = None,
         session: Session = NEW_SESSION,
@@ -569,7 +564,6 @@ class DagRun(Base, LoggingMixin):
         :param run_type: type of DagRun
         :param logical_date: the logical date
         :param state: the state of the dag run
-        :param external_trigger: whether this dag run is externally triggered
         :param no_backfills: return no backfills (True), return all (False).
             Defaults to False
         :param session: database session
@@ -597,8 +591,6 @@ class DagRun(Base, LoggingMixin):
             qry = qry.where(cls.logical_date <= logical_end_date)
         if state:
             qry = qry.where(cls.state == state)
-        if external_trigger is not None:
-            qry = qry.where(cls.external_trigger == external_trigger)
         if run_type:
             qry = qry.where(cls.run_type == run_type)
         if no_backfills:
@@ -987,7 +979,7 @@ class DagRun(Base, LoggingMixin):
             msg = (
                 "DagRun Finished: dag_id=%s, logical_date=%s, run_id=%s, "
                 "run_start_date=%s, run_end_date=%s, run_duration=%s, "
-                "state=%s, external_trigger=%s, run_type=%s, "
+                "state=%s, run_type=%s, "
                 "data_interval_start=%s, data_interval_end=%s, dag_version_name=%s"
             )
             dagv = session.scalar(select(DagVersion).where(DagVersion.id == self.dag_version_id))
@@ -1004,7 +996,6 @@ class DagRun(Base, LoggingMixin):
                     else None
                 ),
                 self._state,
-                self.external_trigger,
                 self.run_type,
                 self.data_interval_start,
                 self.data_interval_end,
@@ -1039,7 +1030,6 @@ class DagRun(Base, LoggingMixin):
                 if self.start_date and self.end_date
                 else 0,
                 "state": str(self._state),
-                "external_trigger": self.external_trigger,
                 "run_type": str(self.run_type),
                 "data_interval_start": str(self.data_interval_start),
                 "data_interval_end": str(self.data_interval_end),
@@ -1244,11 +1234,11 @@ class DagRun(Base, LoggingMixin):
         rid of the outliers on the stats side through dashboards tooling.
 
         Note that the stat will only be emitted for scheduler-triggered DAG runs
-        (i.e. when ``external_trigger`` is *False* and ``clear_number`` is equal to 0).
+        (i.e. when ``run_type`` is *SCHEDULED* and ``clear_number`` is equal to 0).
         """
         if self.state == TaskInstanceState.RUNNING:
             return
-        if self.external_trigger:
+        if self.run_type != DagRunType.SCHEDULED:
             return
         if self.clear_number > 0:
             return
