# airflow/www/views.py
@@ -2241,7 +2241,6 @@ class Airflow(AirflowBaseView):
                 conf=run_conf,
                 run_type=DagRunType.MANUAL,
                 triggered_by=DagRunTriggeredByType.UI,
-                external_trigger=True,
                 dag_version=DagVersion.get_latest_version(dag.dag_id),
                 state=DagRunState.QUEUED,
                 session=session,
@@ -4785,7 +4784,6 @@ class DagRunModelView(AirflowModelView):
         "start_date",
         "end_date",
         "note",
-        "external_trigger",
         "conf",
         "duration",
     ]
@@ -4798,7 +4796,6 @@ class DagRunModelView(AirflowModelView):
         "start_date",
         "end_date",
         "note",
-        "external_trigger",
     ]
     label_columns = {
         "logical_date": "Logical Date",
@@ -4824,7 +4821,6 @@ class DagRunModelView(AirflowModelView):
         "start_date",
         "end_date",
         # "note", # todo: maybe figure out how to re-enable this
-        "external_trigger",
         "conf",
     ]
 
